<resources>
    <string name="app_name">Dice Roller 40k</string>
    <string name="SplashScreen_Title_lbl">Dice\r\nRoller</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_menu">Dice Roller</string>
    <string name="MainMenu_diceRollerBtnText">Dice Roller</string>
    <string name="DiceRollerButtonText">Dice Roller</string>
    <string name="WoundsButtonText">Wounds Counter</string>
    <string name="ScatterRollerButtonText">Scatter Dice</string>
    <string name="title_activity_dice_roller">Dice Roller</string>
    <string name="DiceRoller_noDice_lbl">No. Dice: </string>
    <string name="DiceRoller_noSides_lbl">No. Sides: </string>
    <string name="DiceRoller_roll_btn">Roll</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_roll_results">Dice Roller</string>
    <string name="Results_results_lbl">Results:</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="DiceRoller_shake_lbl">or shake the device!</string>
    <string name="Results_back_btn">Back</string>
    <string name="WoundCounter_name_lbl">Character name:</string>
    <string name="WoundCounter_wounds_lbl">No. wounds:</string>
    <string name="WoundCounter_addChar_btn">+</string>
    <string name="title_activity_scatter_dice">Dice Roller</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_contentenu_">DUMMY\nCONTENT</string>
    <string name="title_activity_scatter_roller">Dice Roller</string>
    <string name="title_activity_wound_counter">Dice Roller</string>
    <string name="WoundsCounter_header_lbl">Wound Counter</string>
    <string name="WoundsCounter_nameHeader_lbl">Character Name:</string>
    <string name="WoundsCounter_woundsHeader_lbl">Wounds:</string>
    <string name="WoundsCounter_charNameBox_txt">Name</string>
    <string name="WoundsCounter_woundsBox_txt">0</string>
    <string name="WoundsCount_woundBtn_btn">Wound</string>
    <string name="WoundsCount_addBtn_btn">Add</string>
    <string name="WoundsCount_delBtn_btn">Del</string>
    <string name="scatterDice">Scatte Dice Image</string>
    <string name="ScatterDice_Text">Scatter</string>
    <string name="mainMenu_ScatterDice_text">Scatter Dice</string>
    <string name="mainHelpText">To use the scatter dice\r\n1. Place the device face up on the board.\r\n2. Place the template over desired units.\r\n3. Hit scatter on the device and move in the indicated direction by the specified inches.</string>
    <string name="mainAboutText">Version 2.0\r\nFor any questions about this app please email me at lukecaptaincode@gmail.com\r\nThank you for downloading my app!\r\nPlease consider donating or removing ads, it pays for my beer!</string>
    <string name="mainMenu_aboutButton_btn">About</string>
    <!--banner add ids -->
    <string name="mainMenu_adId">ca-app-pub-5946653721028511/9467200388</string>
    <string name="diceRoller_adId">ca-app-pub-5946653721028511/1943933589</string>
    <string name="rollerResults_adId">ca-app-pub-5946653721028511/3420666780</string>
    <string name="woundCounter_adId">ca-app-pub-5946653721028511/4897399980</string>
    <string name="scatterDice_adId">ca-app-pub-5946653721028511/6374133189</string>
    <string name="lessThan"><![CDATA[<]]></string>
    <string name="Equals">=</string>
    <string name="zero">0</string>
    <string name="SortBy">Sort by:</string>
    <string name="LessThan"><![CDATA[>]]></string>
    <string name="SortBtn">Sort</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="del">Del</string>
</resources>