<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lukecaptaincode.diceroller.MainMenu"
    android:theme="@android:style/Theme.NoTitleBar"
    android:background="#000000"
    >

    <Button
        android:text="@string/DiceRollerButtonText"
        android:id="@+id/MainMenu_DiceRoller_btn"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:height="100dp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/buttonshape"
        />

    <Button
        android:text="@string/WoundsButtonText"
        android:id="@+id/MainMenu_wounds_btn"
        android:height="150dp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/buttonshape"
        android:layout_below="@+id/MainMenu_DiceRoller_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/mainMenu_ScatterDice_text"
        android:id="@+id/MainMenu_scatter_btn"
        android:height="150dp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/buttonshape"
        android:layout_below="@+id/MainMenu_wounds_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:background="@drawable/buttonshapesmaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_aboutButton_btn"
        android:id="@+id/mainMenu_aboutButton_btn"
        android:layout_below="@+id/MainMenu_scatter_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>




</RelativeLayout>
