<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    tools:context="com.lukecaptaincode.diceroller.RollResults">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false"
    android:background="#000000"
    android:id="@+id/Results_scroller_scrl">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context="com.lukecaptaincode.diceroller.RollResults">

    <TextView android:text="@string/Results_results_lbl" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Results_results_lbl"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
    </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Results_back_btn"
        android:background="@drawable/buttonshapesmall"
        android:id="@+id/Results_back_btn"
        android:layout_above="@+id/adView"
        android:layout_alignRight="@+id/adView"
        android:layout_alignEnd="@+id/adView" />
<com.google.android.gms.ads.AdView
    android:id="@+id/adView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    ads:adSize="BANNER"
    ads:adUnitId="@string/rollerResults_adId"
    android:layout_alignBottom="@+id/Results_scroller_scrl"
    android:layout_centerHorizontal="true">
</com.google.android.gms.ads.AdView>


</RelativeLayout>
