<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lukecaptaincode.diceroller.DiceRoller"
    android:background="@color/dark"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/DiceRoller_noDice_lbl"
        android:id="@+id/DiceRoller_noDice_lbl"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/DiceRoller_shake_lbl"
        android:layout_alignStart="@+id/DiceRoller_shake_lbl"
        android:layout_marginTop="42dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:height="50dp"
        android:width="70dp"
        android:id="@+id/DiceRoller_noDice_txt"
        android:textColor="#000000"
        android:color="#4F4F4F"
        android:gravity="center_horizontal"
        android:background="@drawable/editextback"
        android:maxHeight="50dp"
        android:maxWidth="100dp"
        android:minHeight="50dp"
        android:minWidth="100dp"
        android:longClickable="false"
        android:linksClickable="false"
        android:textSize="35sp"
        android:text="1"
        android:layout_alignBaseline="@+id/DiceRoller_noDice_lbl"
        android:layout_alignBottom="@+id/DiceRoller_noDice_lbl"
        android:layout_alignRight="@+id/DiceRoller_shake_lbl"
        android:layout_alignEnd="@+id/DiceRoller_shake_lbl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/DiceRoller_noSides_lbl"
        android:id="@+id/DiceRoller_noSides_lbl"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_alignBaseline="@+id/DiceRoller_noSides_txt"
        android:layout_alignBottom="@+id/DiceRoller_noSides_txt"
        android:layout_toLeftOf="@+id/DiceRoller_noSides_txt"
        android:layout_toStartOf="@+id/DiceRoller_noSides_txt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:height="50dp"
        android:width="70dp"
        android:id="@+id/DiceRoller_noSides_txt"
        android:textColor="#000000"
        android:color="#4F4F4F"
        android:gravity="center_horizontal"
        android:background="@drawable/editextback"
        android:maxHeight="50dp"
        android:maxWidth="100dp"
        android:minHeight="50dp"
        android:minWidth="100dp"
        android:longClickable="false"
        android:linksClickable="false"
        android:textSize="35sp"
        android:text="6"
        android:shadowColor="#000000"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/DiceRoller_roll_btn"
        android:layout_alignLeft="@+id/DiceRoller_noDice_txt"
        android:layout_alignStart="@+id/DiceRoller_noDice_txt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DiceRoller_roll_btn"
        android:textSize="26sp"
        android:id="@+id/DiceRoller_roll_btn"
        android:background="@drawable/buttonshape_small_selector"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DiceRoller_shake_lbl"
        android:id="@+id/DiceRoller_shake_lbl"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:layout_below="@+id/DiceRoller_roll_btn"
        android:layout_centerHorizontal="true" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/diceRoller_adId">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
