<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lukecaptaincode.diceroller.woundCounterCharacter">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainRelLayout"
        android:orientation="vertical" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:id="@+id/RelLayout1"
        android:background="@drawable/woundcounterdiv"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/WoundsCounter_charName1_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/WoundsCounter_wounds1_txt"

            android:background="@drawable/editextbacksmall"
            android:text="@string/WoundsCounter_charNameBox_txt"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/WoundsCounter_wounds1_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/editextbacksmaller"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/WoundsCounter_woundsBox_txt"
            android:textSize="15sp" />

        <Button
            android:id="@+id/WoundCounter_wound1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/buttonshapesmaller"
            android:text="@string/WoundsCount_woundBtn_btn"
            android:textSize="12sp" />

        <Button
            android:id="@+id/WoundCounter_add1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/WoundCounter_del1_btn"
            android:background="@drawable/buttonshapesmaller"
            android:layout_marginRight="15dp"
            android:text="Add"
            android:textSize="12sp" />

        <Button
            android:id="@+id/WoundCounter_del1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/WoundCounter_add1_btn"
            android:layout_alignBottom="@+id/WoundCounter_add1_btn"
            android:layout_alignParentEnd="true"

            android:layout_alignParentRight="true"
            android:background="@drawable/buttonshapesmaller"
            android:text="@string/del"
            android:textSize="12sp" />

    </RelativeLayout>

</FrameLayout>
